--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Preact + TS</title>
   </head>
-  <body style="margin: 50px">
+  <body style="margin: 50px; width: 400px">
     <script
       type="module"
       src="https://assets.gavel.dev/web-components/gavel-components.js"
